@@ -34,7 +34,7 @@ static u32 inet_ehashfn(const struct net *net, const __be32 laddr,
 {
 	static u32 inet_ehash_secret __read_mostly;
 
-	net_get_random_once(&inet_ehash_secret, sizeof(inet_ehash_secret));
+//	net_get_random_once(&inet_ehash_secret, sizeof(inet_ehash_secret));  // FIXME
 
 	return __inet_ehashfn(laddr, lport, faddr, fport,
 			      inet_ehash_secret + net_hash_mix(net));
