@@ -1,0 +1,6 @@
+extern "C"
+{
+void pcap_start(const char* filename);
+void pcap_stop();
+int pcap_write(const char *buf, int len, int origlen);
+}
